[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://GUI/Interface2.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/Interface2.gd" type="Script" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://World.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/Interface.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/Interface.gd" type="Script" id=7]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="interface2" parent="Viewports/ViewportContainer2" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 510, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
current = true
script = ExtResource( 4 )

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 510, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
current = true
script = ExtResource( 4 )

[node name="World" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 5 )]

[node name="interface" parent="Viewports/ViewportContainer1" instance=ExtResource( 6 )]
script = ExtResource( 7 )

[node name="Minimap" type="ViewportContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -221.0
margin_right = 124.0
margin_bottom = -10.0
stretch = true

[node name="Viewport" type="Viewport" parent="Minimap"]
size = Vector2( 248, 211 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Minimap/Viewport"]
position = Vector2( 300, 300 )
offset = Vector2( 1090, 900 )
current = true
zoom = Vector2( 11, 11 )
